# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Id$

  26 Feb 2004; Masatomo Nakano <nakano@gentoo.org> emerge: Added new option
  --newuse. This option is to rebuild a package whose USE has been changed.

  22 Feb 2004; Masatomo Nakano <nakano@gentoo.org> emerge, portage.py: speedup
  when /etc/portage/package.keywords is defined. Moved loading
  /etc/portage/package.* processs to config class. This should fix #41520.

  19 Feb 2004; Masatomo Nakano <nakano@gentoo.org> portage.py:
  Fixed CATEGORY value after preinst phase. This should close #6414. Fixed
  nested dependency problem and cleaned up dep_zapdeps function.
  This bug happened with DEPEND='|| ( cat_a/pkg_a flag? ( cat_b/pkg_b ) )'.
  This should close #41869.

  13 Feb 2004; Masatomo Nakano <nakano@gentoo.org> portage.py: Fixed parsing
  SRC_URI bug when FEATURES="cvs". This should close #16159.

  12 Feb 2004; Masatomo Nakano <nakano@gentoo.org> emerge, pym/portage.py:
  TGL's patch for correction package size when emerge -v. -- Fixed
  use.default bug. It occurs when package in use.default exists in system
  and it's virtual package. This should close #40831. 

  12 Feb 2004; Masatomo Nakano <nakano@gentoo.org> emerge: Fixed 
  --ask bugs. It breaks with "--clean". It also breaks when blocker
  exists.  This should close #39865.

  12 Feb 2004; Masatomo Nakano <nakano@gentoo.org> emerge: Fixed
  --ask bug with --changelog. This should close #41293.

  11 Feb 2004; Masatomo Nakano <nakano@gentoo.org> emergehelp.py: Added
  help of F flag with emerge --pretend. This should close #28253.

  11 Feb 2004; Masatomo Nakano <nakano@gentoo.org> pym/portage.py: Fixed 
  ccache dir permission problem with FEATURES="userpriv".
  This should fix #22125.

*portage-2.0.50-r1 (09 Feb 2003): Release Fixes

  09 Jan 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Fix the config